# storage/api-docs/api-docs.json
@@ -6,14 +6,14 @@
         "version": "1.0.0"
     },
     "paths": {
-        "/vend/recharge": {
+        "/vend/recharge/{type}": {
             "get": {
                 "tags": [
                     "Airtime"
                 ],
                 "summary": "buy airtime",
                 "description": "Endpoint for purchasing airtime, either from Bap or Shago Services",
-                "operationId": "45edaa36c14db56f947dd000810c5917",
+                "operationId": "3ad6c37440e2d9f2130228006d7112cd",
                 "parameters": [
                     {
                         "name": "phone_number",
@@ -45,9 +45,7 @@
                             "type": "string",
                             "enum": [
                                 "MTN",
-                                "AIRTEL",
-                                "GLO",
-                                "9MOBILE"
+                                "GLO"
                             ],
                             "example": "MTN"
                         }
